# luajit_max

./: .gitignore  CMakeLists.txt  Makefile  README.md  mappings.cpp  parsed.yml
examples/: README.md  demo.lua  dsp.lua  dsp_funcs.lua  dsp_stk.lua  dsp_worp.lua  luajit  script.lua
help/: luajit.stk~.maxhelp  luajit~.maxhelp  params
patchers/: test_luajit.maxpat
source/projects/libdsp/: build.sh  libdsp.c  luajit  test.lua
source/projects/luajit.stk~/: CMakeLists.txt  README.md  luajit.stk~.cpp  luajit.stk~.cpp.bak
source/projects/luajit.stk~/test/: build.sh  main.cpp
source/projects/luajit.stk~/tests/test_luabridge/: build.sh  lua_call_cpp.lua  main.cpp
source/projects/luajit~/: CMakeLists.txt  luajit~.c  test.c
source/scripts/: build_dependencies.sh  build_stk.sh  fix_bundle.sh  parse_headers.py  parse_headers2.py  pretarget.cmake
